fixed alignment

--- a/src/Nav/Nav.module.scss
+++ b/src/Nav/Nav.module.scss
@@ -25,6 +25,7 @@
     width: 50%;
     height: 80px;
     float: right;
+    text-align: right;
 }
 
 
